<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">蓝PI等风</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="camera_aqi">拍一拍测AQI</string>
    <string name="rank_list">排行榜</string>
    <string name="good_remark">好评鼓励</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <string name="level">级</string>
    <string name="hour">时</string>
    <string name="wind_speed">风速</string>
    <string name="micor_wind">微风</string>
    <string name="big_wind">大风</string>
    <string name="force_wind">强风</string>
    <string name="speed_forecast">风速预报</string>
    <string name="pollute_condition">污染条件</string>
    <string name="weather_quality">空气质量</string>
    <string name="today">今天</string>
    <string name="tommorow">明天</string>
    <string name="after_tomm">后天</string>
    <string name="nice_prompt">温馨提示：</string>
    <string name="unkown_position">未知位置</string>
    <string name="percent_hour">逐小时</string>
    <string name="seven_days">七天</string>
    <string name="level_1">一级</string>
    <string name="level_2">二级</string>
    <string name="level_3">三级</string>
    <string name="level_4">四级</string>
    <string name="level_5">五级</string>
    <string name="level_6">六级</string>
    <string name="current_prompt">当前提示：</string>
    <string name="today_prompt">今日提示：</string>
    <string name="camera_or_select">拍照或选择图片</string>
    <string name="camera_prompt">拍摄含参照物的户外远景照片测量结果更准确哦~</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="dial">拨打</string>
    <string name="aqi_level">AQI等级：</string>
    <string name="visibility">能见度：</string>
    <string name="publish">发布</string>
    <string name="nation_top_ten">全国前十</string>
    <string name="your_focus_city">你所关注的城市</string>
    <string name="version">版本号：</string>
    <string name="submit">提交</string>
    <string name="submit_success">提交成功！</string>
    <string name="submit_failed">提交失败！</string>
    <string name="input_content">请输入您宝贵的反馈意见！</string>
    <string name="confirm_delete">确定要删除？</string>
    <string name="no_pollution_data">无此数据\n(暂不提供该地区污染条件预报数据)</string>
    <string name="no_aqi_data">无此数据\n(暂不提供该地区AQI预报数据)</string>
    <string name="confirm_exit">再按一次退出</string>
    
    <!-- 蒲公英自动更新 -->
    <string name="auto_update">更新提醒</string>
    <string name="new_version">最新版本：</string>
    <string name="update_log">更新日志：</string>
    <string name="update_right_now">立即更新</string>
    <string name="update_later">以后再说</string>
    <string name="already_new_version">已经是最新版本！</string>
    
    
    <string name="copyright">版权所有：\n该软件版权为北京华风创新网络技术有限公司所有，未经北京华风创新网络技术有限公司允许，任何企业、单位和个人不得以任何形式赋值或传递。</string>
    <string name="data_resource">数据来源：\n1.华风创新网络技术有限公司提供未来24小时风力预报及只能语言描述
        \n2.中央气象台提供空气污染气象条件预报
        \n3.华风象辑提供空气质量指数（AQI）预报</string>
    
    <!-- 星期表 -->
    <string name="one">周一</string>
    <string name="two">周二</string>
    <string name="three">周三</string>
    <string name="four">周四</string>
    <string name="five">周五</string>
    <string name="six">周六</string>
    <string name="seven">周日</string>
    
    <!-- 单位符号 -->
    <string name="unit_percent">%</string>
    <string name="unit_mm">mm</string>
    <string name="unit_hPa">hPa</string>
    <string name="unit_degree">℃</string>
    <string name="unit_speed">m/s</string>
    <string name="unit_m">m</string>
    <string name="unit_km">km</string>
    <string name="unit_hour">小时</string>
    <string name="unit_minute">分钟</string>
    
    <!-- 空气质量表 -->
    <string name="aqi0">优</string>
    <string name="aqi1">良</string>
    <string name="aqi2">轻度</string>
    <string name="aqi3">中度</string>
    <string name="aqi4">重度</string>
    <string name="aqi5">严重</string>
    
    <string name="aqi0_text">空气质量令人满意，基本无空气污染，各类人群可正常活动。</string>
    <string name="aqi1_text">空气质量可接受，但某些污染物可能对极少数异常敏感人群健康有较弱影响，建议极少数异常敏感人群应减少户外活动。</string>
    <string name="aqi2_text">易感人群症状有轻度加剧，健康人群出现刺激症状。建议儿童、老年人及心脏病、呼吸系统疾病患者应减少长时间、高强度的户外锻炼。</string>
    <string name="aqi3_text">进一步加剧易感人群症状，可能对健康人群心脏、呼吸系统有影响，建议疾病患者避免长时间、高强度的户外锻练，一般人群适量减少户外运动。</string>
    <string name="aqi4_text">心脏病和肺病患者症状显著加剧，运动耐受力降低，健康人群普遍出现症状-建议儿童、老年人和心脏病、肺病患者应停留在室内，停止户外运动，一般人群减少户外运动。</string>
    <string name="aqi5_text">健康人群运动耐受力降低，有明显强烈症状，提前出现某些疾病-建议儿童、老年人和病人应当留在室内，避免体力消耗，一般人群应避免户外活动。</string>
   
    
    <!-- 空气污染表 -->
    <string name="pollution0">好</string>
    <string name="pollution1">较好</string>
    <string name="pollution2">一般</string>
    <string name="pollution3">较差</string>
    <string name="pollution4">差</string>
    <string name="pollution5">极差</string>
    
    <string name="pollution0_text">非常有利于空气污染物稀释、扩散和清除</string>
    <string name="pollution1_text">较有利于空气污染物稀释、扩散和清除</string>
    <string name="pollution2_text">对空气污染物稀释、扩散和清除无明显影响</string>
    <string name="pollution3_text">不利于空气污染物稀释、扩散和清除</string>
    <string name="pollution4_text">很不利于空气污染物稀释、扩散和清除</string>
    <string name="pollution5_text">极不利于空气污染物稀释、扩散和清除</string>
    
    <!-- 风向表 -->
    <string name="wind_dir0">无持续风向</string>
    <string name="wind_dir1">东北风</string>
    <string name="wind_dir2">东风</string>
    <string name="wind_dir3">东南风</string>
    <string name="wind_dir4">南风</string>
    <string name="wind_dir5">西南风</string>
    <string name="wind_dir6">西风</string>
    <string name="wind_dir7">西北风</string>
    <string name="wind_dir8">北风</string>
    <string name="wind_dir9">旋转风</string>
    
    <!-- 风力表 -->
    <string name="wind_force0">微风</string>
    <string name="wind_force1">3-4级</string>
    <string name="wind_force2">4-5级</string>
    <string name="wind_force3">5-6级</string>
    <string name="wind_force4">6-7级</string>
    <string name="wind_force5">7-8级</string>
    <string name="wind_force6">8-9级</string>
    <string name="wind_force7">9-10级</string>
    <string name="wind_force8">10-11级</string>
    <string name="wind_force9">11-12级</string>
    
    <!-- 天气表 -->
    <string name="weather0">晴</string>
    <string name="weather1">多云</string>
    <string name="weather2">阴</string>
    <string name="weather3">阵雨</string>
    <string name="weather4">雷阵雨</string>
    <string name="weather5">雨夹冰雹</string>
    <string name="weather6">雨夹雪</string>
    <string name="weather7">小雨</string>
    <string name="weather8">中雨</string>
    <string name="weather9">大雨</string>
    <string name="weather10">暴雨</string>
    <string name="weather11">大暴雨</string>
    <string name="weather12">特大暴雨</string>
    <string name="weather13">阵雪</string>
    <string name="weather14">小雪</string>
    <string name="weather15">中雪</string>
    <string name="weather16">大雪</string>
    <string name="weather17">暴雪</string>
    <string name="weather18">雾</string>
    <string name="weather19">冻雨</string>
    <string name="weather20">沙尘暴</string>
    <string name="weather21">小雨-中雨</string>
    <string name="weather22">中雨-大雨</string>
    <string name="weather23">大雨-暴雨</string>
    <string name="weather24">暴雨-大暴雨</string>
    <string name="weather25">大暴雨-特大暴雨</string>
    <string name="weather26">小雪-中雪</string>
    <string name="weather27">中雪-大雪</string>
    <string name="weather28">大雪-暴雪</string>
    <string name="weather29">浮尘</string>
    <string name="weather30">扬沙</string>
    <string name="weather31">强沙尘暴</string>
    <string name="weather32">浓雾</string>
    <string name="weather33">雪</string>
    <string name="weather49">强浓雾</string>
    <string name="weather53">霾</string>
    <string name="weather54">中度霾</string>
    <string name="weather55">重度霾</string>
    <string name="weather56">严重霾</string>
    <string name="weather57">大雾</string>
    <string name="weather58">特强浓雾</string>

</resources>
