<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/reMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/corner_title_bg"
            android:gravity="center_vertical" >

            <LinearLayout
                android:id="@+id/llToday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/corner_left_title_bg"
                android:gravity="center_horizontal|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvDate1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01-26"
                    android:textColor="@color/white"
                    android:textSize="@dimen/level_5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTommorow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:gravity="center_horizontal|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvTommorow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tommorow"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvDate2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01-26"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAfter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/corner_right_white"
                android:gravity="center_horizontal|center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvAfter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/after_tomm"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/tvDate3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="01-26"
                    android:textColor="@color/black"
                    android:textSize="@dimen/level_5" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ivAqi"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/ll1"
            android:layout_centerHorizontal="true"
            android:src="@drawable/aqi_zero" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/nice_prompt"
                android:textColor="@color/black"
                android:textSize="@dimen/level_4" />

            <TextView
                android:id="@+id/tvAqiText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/aqi0_text"
                android:textColor="@color/gray"
                android:textSize="@dimen/level_4" />

            <TextView
                android:id="@+id/tvAqi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/pollution0"
                android:textColor="@color/title_bg"
                android:textSize="40dp" />

            <ImageView
                android:id="@+id/ivScrollBar"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/iv_scroll_bar" />

            <LinearLayout
                android:id="@+id/llContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvZero"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="#00FF01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/level_1"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvOne"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="#96EF01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/level_2"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvTwo"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="#FFFF01" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/level_3"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvThree"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="#FF6400" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/level_4"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvFour"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="#FE0000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/level_5"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tvFive"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="#7E0123" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:text="@string/level_6"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/level_5" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/tvNoData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/no_pollution_data"
        android:textColor="@color/gray"
        android:textSize="@dimen/level_4" />

</RelativeLayout>