<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/corner_dialog_login"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/reCamera"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/selector_top"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/camera"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/level_4" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="@drawable/horizital_line" />

        <RelativeLayout
            android:id="@+id/reSelect"
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:background="@drawable/selector_cell"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/album"
                android:textColor="@color/text_color1"
                android:textSize="@dimen/level_4" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="@drawable/horizital_line" />

        <RelativeLayout
            android:id="@+id/reCancel"
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/selector_bottom"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/cancel"
                android:textColor="#1e90ff"
                android:textSize="@dimen/level_5" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>